frontend/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datakirk-frontend
  labels:
    app: datakirk-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: datakirk-frontend
  template:
    metadata:
      labels:
        app: datakirk-frontend
    spec:
      containers:
      - name: datakirkfrontend
        image: vixion/datakirk_frontend:latest
        ports:
        - containerPort: 80
