frontend/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: datakirk-service
spec:
  selector:
    app: datakirk-frontend
  ports:
  - name: datakirk-frontend-port
    protocol: TCP
    port: 80
    targetPort: 80
  # type: LoadBalancer
