frontend/datakirk_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datakirk-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: a0a27ede0730e410595da676e41de425-ee20d22a46452744.elb.eu-west-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datakirk-service
            port:
              number: 80
